fix: on demand search squishing

--- a/src/app/components/results-menu/scenes-list/scenes-list.component.scss
+++ b/src/app/components/results-menu/scenes-list/scenes-list.component.scss
@@ -64,6 +64,9 @@
 
 .date-time {
   font-size: 14px !important;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .mobile-size .mat-mdc-list-base .mat-mdc-list-item {
